# stringcase-new

./: .gitignore  CHANGELOG.md  README.rst  changelog.md  pyproject.toml  stringcase_test.py
