[project]
name = "stringcase-new"
version = "1.2.2"
description = "String case converter."
readme = "README.rst"
license = "MIT"

[[project.authors]]
name = "Taka Okunishi"
email = "okunishitaka.com@gmail.com"

[[project.maintainers]]
name = "Karl Knechtel"
email = "zahlman@proton.me"

[project.urls]
bugs = "https://github.com/zahlman/stringcase-new/issues"
changelog = "https://github.com/zahlman/stringcase-new/blob/master/changelog.md"
homepage = "https://github.com/zahlman/stringcase-new"

[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "stringcase"
